FIX: z-index of chat higher than sidebar topic timeline

--- a/assets/stylesheets/drawer.scss
+++ b/assets/stylesheets/drawer.scss
@@ -1,7 +1,7 @@
 $header-height: 2.5rem;
 
 .topic-chat-float-container {
-  z-index: 199; // higher than timeline, lower than composer, lower than user card
+  z-index: 201; // higher than timeline, lower than composer, lower than user card
   position: fixed;
   right: 0;
   left: 0;
